	- Add labels to the vessel switcher score entries for rockets, missiles, rams and tag.
	- Parts with zero lift now appear as grey in the lift visualizer.
	- Fix issues with wing stacking calculation. Calculation now returns ratio of non-separated vertically stacked lift area to total lift area (capped at 100%). Wings spaced sufficiently apart will not contribute to the stacking value.
- AI / WM:
	- AI will start evading missiles once the missile engine activates instead of waiting for 1 second after launch.
	- When avoiding terrain and roll is inverted by more than 30°, reverse the roll target so that terrain avoidance is done while fully inverted and enable Aiming steer mode for more yaw control.
- Countermeasures:
	- Add selection priority to countermeasures to allow staggering of dropping countermeasures — higher priority CM dispensers trigger first.

v1.5.8.0
IMPROVEMENTS / FIXES
- General:
	- Fix Firebottle mass not resetting if a part switched from fueltank to structural.
- UI:
	- Fix layout of vessel switcher window buttons and version label.
	- Add debug button when DEBUG_OTHER is enabled for dumping part info.
	- Add a 'Start competition automatically' button to the Vessel Spawner window for use with 'single spawn'.
	- Updated German localisation from EzBro.
	- Fix some AI GUI infotext.
	- Clean up ordering and consistency in the AI GUI and in-flight WM windows.
- Competition:
	- Tweaks to sequenced competition start-up to allow a single plane to perform the sequence despite not having enough teams for a competition.
	- Add an option to save the image from plot_summary.py with a transparent background.
- AI / WM:
	- Fix max collision avoidance strength in AI GUI.
	- Fix NRE when adjusting autotuning fields in the SPH.
	- AI will no longer dive into missiles approaching from directly below.
	- Reset the auto-tune PID values to the best ones when lowering the learning rate.
	- Add a keybind for arming/disarming the WM.
- Detectors