@@ -200,6 +200,7 @@ Localization
         #LOC_BDArmory_Settings_DestroyWMWhenNotControlled = Destroy Uncontrolled WMs
         #LOC_BDArmory_Settings_DisplayCompetitionStatus = Display Competition Status
         #LOC_BDArmory_Settings_DisplayCompetitionStatusHiddenUI = Show Status With UI Hidden
+        #LOC_BDArmory_Settings_CameraSwitchIncludeMissiles = Camera Switch: Incl. Missiles
         #LOC_BDArmory_Settings_ScrollZoomPrevention = Scroll-Zoom Prevention
         #LOC_BDArmory_Settings_ResetHP = Reset Max HP of Parts
         #LOC_BDArmory_Settings_ResetArmor = Reset Armor of parts
