@@ -1095,6 +1095,7 @@ namespace BDArmory.Weapons.Missiles
 
                 StartCoroutine(MissileRoutine());
                 if (BDArmorySettings.DEBUG_MISSILES) Debug.Log("[BDArmory.MissileLauncher]: Missile Launched!");
+                if (BDArmorySettings.CAMERA_SWITCH_INCLUDE_MISSILES && SourceVessel.isActiveVessel) LoadedVesselSwitcher.Instance.ForceSwitchVessel(vessel);
             }
             catch (Exception e)
             {
@@ -1343,6 +1344,7 @@ namespace BDArmory.Weapons.Missiles
 
                     isTimed = true;
                     detonationTime = TimeIndex + 1.5f;
+                    if (BDArmorySettings.CAMERA_SWITCH_INCLUDE_MISSILES && vessel.isActiveVessel) LoadedVesselSwitcher.Instance.TriggerSwitchVessel();
                     return;
                 }
             }
@@ -1357,7 +1359,7 @@ namespace BDArmory.Weapons.Missiles
                     guidanceActive = false;
                     BDATargetManager.FiredMissiles.Remove(this);
                     if (BDArmorySettings.DEBUG_MISSILES) Debug.Log("[BDArmory.MissileLauncher]: Missile Guidance Failed!");
-                }     
+                }
 
             if (guidanceActive)
             {
